--- a/androidLogo/index.html
+++ b/androidLogo/index.html
@@ -10,16 +10,16 @@
 <body>
     <div id="android">
         <div id="head">
-            <div id="l_ant"></div>
-            <div id="r_ant"></div>
-            <div id="l_eye"></div>
-            <div id="r_eye"></div>
+            <div id="left_ant"></div>
+            <div id="right_ant"></div>
+            <div id="left_eye"></div>
+            <div id="right_eye"></div>
         </div>
         <div id="body">
-            <div id="l_arm"></div>
-            <div id="r_arm"></div>
-            <div id="l_leg"></div>
-            <div id="r_leg"></div>
+            <div id="left_arm"></div>
+            <div id="right_arm"></div>
+            <div id="left_leg"></div>
+            <div id="right_leg"></div>
         </div>
     </div>
 </body>
